@@ -10,6 +10,7 @@
 #include <util/encode/hex.h>
 #include <util/strutil.h>
 #include <asiolink/io_address.h>
+#include <boost/random.hpp>
 #include <boost/random/uniform_int_distribution.hpp>
 #include <boost/random/mersenne_twister.hpp>
 #include <exceptions/exceptions.h>
@@ -47,9 +48,9 @@ AuthKey::getRandomKeyString() {
 
 std::string 
 AuthKey::ToText() const {
-    std::ostringstream s;
-    //s << authKey_;
-    return (authKey_);
+    //this will need enhancement if the stored container is not
+    //string
+    return authKey_;
 }
 
 void
@@ -146,7 +147,7 @@ Host::Host(const uint8_t* identifier, const size_t identifier_len,
       server_host_name_(server_host_name), boot_file_name_(boot_file_name),
       host_id_(0), cfg_option4_(new CfgOption()),
       cfg_option6_(new CfgOption()), negative_(false), 
-      key_(auth_key){
+      key_(auth_key) {
 
     // Initialize host identifier.
     setIdentifier(identifier, identifier_len, identifier_type);
@@ -182,7 +183,7 @@ Host::Host(const std::string& identifier, const std::string& identifier_name,
       server_host_name_(server_host_name), boot_file_name_(boot_file_name),
       host_id_(0), cfg_option4_(new CfgOption()),
       cfg_option6_(new CfgOption()), negative_(false),
-      key_(auth_key){
+      key_(auth_key) {
 
     // Initialize host identifier.
     setIdentifier(identifier, identifier_name);
